@@ -1,23 +1,23 @@
-ARCH_LOC_1 := $(wildcard $(shell root-config --prefix)/test/Makefile.arch)
-ARCH_LOC_2 := $(wildcard $(shell root-config --prefix)/share/root/test/Makefile.arch)
-ARCH_LOC_3 := $(wildcard $(shell root-config --prefix)/share/doc/root/test/Makefile.arch)
-ifneq ($(strip $(ARCH_LOC_1)),)
-  $(info Using $(ARCH_LOC_1))
-  include $(ARCH_LOC_1)
-else
-  ifneq ($(strip $(ARCH_LOC_2)),)
-    $(info Using $(ARCH_LOC_2))
-    include $(ARCH_LOC_2)
-  else
-    ifneq ($(strip $(ARCH_LOC_3)),)
-      $(info Using $(ARCH_LOC_3))
-      include $(ARCH_LOC_3)
-    else
-      $(error Could not find Makefile.arch! ROOT not set up?)
-    endif
-  endif
-endif
-
+# ARCH_LOC_1 := $(wildcard $(shell root-config --prefix)/test/Makefile.arch)
+# ARCH_LOC_2 := $(wildcard $(shell root-config --prefix)/share/root/test/Makefile.arch)
+# ARCH_LOC_3 := $(wildcard $(shell root-config --prefix)/share/doc/root/test/Makefile.arch)
+# ifneq ($(strip $(ARCH_LOC_1)),)
+#   $(info Using $(ARCH_LOC_1))
+#   include $(ARCH_LOC_1)
+# else
+#   ifneq ($(strip $(ARCH_LOC_2)),)
+#     $(info Using $(ARCH_LOC_2))
+#     include $(ARCH_LOC_2)
+#   else
+#     ifneq ($(strip $(ARCH_LOC_3)),)
+#       $(info Using $(ARCH_LOC_3))
+#       include $(ARCH_LOC_3)
+#     else
+#       $(error Could not find Makefile.arch! ROOT not set up?)
+#     endif
+#   endif
+# endif
+# 
 ROOTBIN := $(shell root-config --bindir)
 ROOTLIB := $(shell root-config --libdir)
 ROOTINC := $(shell root-config --incdir)
