@@ -4,3 +4,7 @@
 	* adding example directory with files to test JVT installation, 
 	* adding default constructor 
 	* fiddling with Root ClassDef
+2014-08-05 P. Nef: trunk
+	* adding new likelihood data/JVTlikelihood_20140805.root 
+	  which is the one trained on the RootCore implementation 
+	  of corrJVF and RpT
